# G4PhaseSpaceReader

./: .gitignore  CMakeLists.txt  G4PSReader.sublime-workspace  G4PhaseSpaceReader.cc  run.sh  runCluster.sh
data/: PSTAR_LETs.csv  PSTAR_LETs_512.csv
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorConstructionMessenger.hh  EdepScorer.hh  EdepSquaredEventbyEventScorer.hh  EdepUncertaintyScorer.hh  Eppendorf_48WellPlate_Model.hh  G4VectorAccumulable.hh  G4VectorAccumulable.imp  LETSpectrumScorer.hh  ParallelWorldConstruction.hh  PhaseSpaceAccessTool.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  ProtonSlowingSpectrumScorer.hh  ProtonSpectrumScorer.hh  RunAction.hh  StraightLineParameterisation.hh  chargescorer.hh
macros/: AllHP_100k_10mm_lateralProfile.mac  AllHP_100mil.mac  AllHP_100mil_10mm_wellPlate.mac  AllHP_100mil_10mm_wideLateralProfile.mac  AllHP_100mil_1mm_wideLateralProfile.mac  AllHP_100mil_41_85mm_wellPlate.mac  AllHP_100mil_41_95mm_wellPlate.mac  AllHP_100mil_41_9mm_wellPlate.mac  AllHP_100mil_42mm_wellPlate.mac  AllHP_100mil_42mm_wideLateralProfile.mac  AllHP_100mil_highRes.mac  AllHP_10mil.mac  AllHP_10mil_10mm_lateralProfile.mac  AllHP_10mil_10mm_wideLateralProfile.mac  AllHP_1bil_10mm_wideLateralProfile.mac  AllHP_500k.mac  AllHP_test.mac  RegularHP_100mil.mac  RegularHP_10mil.mac  test.mac  vis_commands.macro_example
runFiles/: AllHP_100k_10mm_lateralProfile.lsf  AllHP_100mil.lsf  AllHP_100mil_10mm_wellPlate.lsf  AllHP_100mil_10mm_wideLateralProfile.lsf  AllHP_100mil_1mm_wideLateralProfile.lsf  AllHP_10mil.lsf  (+14 more)
(+16 files in other folders)
